--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <!-- support for mobile touch devices -->
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-</head>
-<body>
-    <h1>Title</h1>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Casio like Clock</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="clock-wrapper">
+      <div class="clock-container">
+        <div class="clock-display" id="display" title="Clock display">
+          <span class="digits" id="hours">##</span>:<span
+            id="minutes"
+            class="digits"
+            >##</span
+          >:<span id="seconds" class="digits">##</span>
+          <div id="format-12-box"></div>
+        </div>
+        <div class="button top-left" id="reset-button" title="Reset"></div>
+        <div class="button top-right" id="mode-button" title="Mode"></div>
+        <div class="button bottom-left" id="light-button" title="Light"></div>
+        <div
+          class="button bottom-right"
+          id="increment-button"
+          title="Increase"
+        ></div>
+        <div class="bottom-zone" title="Timezone">
+          <select id="timezone-select"></select>
+          <div id="format-12-button" class="format-button">Change Format</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
